fixed style issue on safari ipad

--- a/rails_root/public/stylesheets/ohfy.css
+++ b/rails_root/public/stylesheets/ohfy.css
@@ -155,6 +155,7 @@ a:hover {
 	border-bottom: dashed 1px;
 	font-family: fantasy;
 	font-size: 20px;
+	width: 230px;
 }
 
 input[type="submit"] {
